# ghost-narrator

./: .cz.toml  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  docker-compose.gpu.yml  docker-compose.yml  install.sh  pyproject.toml  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  versioning.yml
docs/: ARCHITECTURE.md  RESILIENCE.md
docs/superpowers/plans/: 2026-04-02-plan-a-foundation-engine-narration.md  2026-04-02-plan-b-storage-voices.md  2026-04-02-plan-c-infrastructure-integration.md  2026-04-14-single-shot-audio-synthesis.md
docs/superpowers/specs/: 2026-04-02-standalone-tts-design.md
n8n/: SETUP_GUIDE.md
n8n/workflows/: ghost-audio-callback.json  ghost-audio-pipeline.json  static-content-audio-pipeline.json
scripts/: add_hmac_node.py  backfill-audio.ps1  backfill-audio.sh  fix_callback_site_detection.py  fix_workflow_activation.py  init.sh  setup-gcp.sh  setup-storage.sh  validate-build.sh
scripts/init/: hardware-probe.sh  ollama-init.sh  vllm-init.sh
tts-service/: .dockerignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run-docker.ps1  run-docker.sh
tts-service/app/: __init__.py  config.py  dependencies.py  main.py
tts-service/app/api/: __init__.py  dependencies.py  middleware.py
tts-service/app/api/middleware/: rate_limit.py
tts-service/app/api/rate_limit_middleware/: __init__.py  rate_limit.py
tts-service/app/api/routes/: __init__.py  config.py  health.py  metrics.py  tts.py  voices.py
tts-service/app/cache/: __init__.py  cache_decorator.py  redis_cache.py
tts-service/app/core/: __init__.py  circuit_breaker.py  connection_pool.py  exceptions.py  hardware.py  logging.py  retry.py  tracing.py  tts_engine.py
tts-service/app/domains/: __init__.py
tts-service/app/domains/enhancement/: __init__.py  deepfilternet.py
tts-service/app/domains/job/: __init__.py  callbacks.py  notification.py  runner.py  state.py  store.py  tts_job.py
tts-service/app/domains/narration/: __init__.py  base.py  factory.py  prompt.py  strategy.py  validator.py
tts-service/app/domains/storage/: __init__.py  base.py  gcs.py  local.py  s3.py
tts-service/app/domains/synthesis/: __init__.py  base.py  chunker.py  concatenate.py  healing.py  mastering.py  normalize.py  quality.py  quality_check.py  scorer.py  service.py
tts-service/app/domains/tts_config/: __init__.py  store.py
tts-service/app/domains/voices/: __init__.py  registry.py  upload.py  validate.py
tts-service/app/models/: __init__.py  schemas.py
tts-service/app/services/: __init__.py  audio.py  job_store.py  notification.py  storage.py  synthesis.py  tts_job.py
tts-service/app/services/narration/: __init__.py  prompt.py  strategy.py  validator.py
tts-service/app/services/storage/: __init__.py  base.py  gcs.py  local.py  s3.py
tts-service/app/services/voices/: __init__.py  registry.py  upload.py
tts-service/app/utils/: __init__.py  normalize.py  text.py
tts-service/docs/: PRODUCTION-RESTRUCTURE.md
tts-service/tests/: conftest.py  test_api_versioning.py  test_auth.py  test_circuit_breaker.py  test_concatenate.py  test_config.py  test_hardware.py  test_job_store.py  test_mastering.py  test_metrics.py  test_middleware.py  test_narration_strategy.py  test_narration_validator.py  test_quality_check.py  test_rate_limit.py  test_redis_cache.py  test_routes_tts.py  test_storage.py  test_synthesis_service.py  test_tracing.py  test_tts_job.py  test_voices.py
tts-service/tests/api/: test_api_versioning.py  test_auth.py  test_metrics.py  test_middleware.py  test_rate_limit.py  test_routes_tts.py
tts-service/tests/core/: test_circuit_breaker.py  test_config.py  test_hardware.py  test_retry.py  test_tracing.py  test_tts_engine.py
tts-service/tests/domains/enhancement/: test_deepfilternet.py
tts-service/tests/domains/job/: test_job_store.py  test_notification.py  test_redis_cache.py  test_tts_job.py
tts-service/tests/domains/narration/: test_narration_strategy.py  test_narration_validator.py
tts-service/tests/domains/storage/: test_storage.py
tts-service/tests/domains/synthesis/: test_best_of_n.py  test_concatenate.py  test_healing.py  test_mastering.py  test_quality_check.py  test_scorer.py  test_synthesis_service.py
tts-service/tests/domains/voices/: test_voices.py
tts-service/tests/utils/: test_normalize.py  test_text_pause.py  test_text_split.py
tts-service/voices/: .gitkeep
