[project]
name = "ghost-narrator-tts"
version = { dynamic = true }
description = "Studio-quality Text-to-Speech API powered by Qwen3-TTS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ayush Naik" }
]

dependencies = [
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "transformers>=4.45.2",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.42.0",
    "pydantic>=2.12.5",
    "redis>=5.0.1",
    "httpx>=0.28.1",
    "google-cloud-storage>=2.16.0",
    "boto3>=1.34.0",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "python-multipart>=0.0.22",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
