[project]
name = "ghost-narrator-tts"
version = { dynamic = true }
description = "Studio-quality Text-to-Speech API powered by Qwen3-TTS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ayush Naik" }
]

dependencies = [
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "transformers>=4.45.2",
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.13.0",
    "redis>=7.4.0",
    "httpx>=0.28.1",
    "google-cloud-storage>=3.10.1",
    "boto3>=1.42.89",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "python-multipart>=0.0.26",
    "prometheus-client>=0.25.0",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-otlp>=1.41.0",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "num2words>=0.5.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
